--- a/src/template.html
+++ b/src/template.html
@@ -9,6 +9,19 @@
   </head>
 
   <body>
-    <div id="root"></div>
+    <div id="root">
+<!--      <form id="form">-->
+<!--        <div class="mb-3">-->
+<!--          <label for="postNumber" class="form-label">Номер поста</label>-->
+<!--          <input type="text" class="form-control" id="postNumber" aria-describedby="emailHelp">-->
+<!--        </div>-->
+<!--        <button type="submit" class="btn btn-primary">Submit</button>-->
+<!--      </form>-->
+<!--      <div class="container">-->
+<!--        <div class="row"></div>-->
+<!--      </div>-->
+
+      <div class="race"></div>
+    </div>
   </body>
 </html>
